fix header + remove extra margin

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,9 +1,8 @@
 .header {
-  width: 1351px;
+  width: 100%;
   height: 156px;
   background-size: cover;
   margin-bottom: 56px;
   background-image: url(https://josefigueroa-job-listings-with-filtering.netlify.app/images/bg-header-desktop.svg);
   background-color: $primary-color;
-  padding: 0 24px;
 }
